remove deprecated getRoutes
